[build-system]
requires = ["hatchling",
"certifi==2022.5.18.1",
"charset-normalizer==2.0.12",
"idna==3.3",
"numpy==1.22.4",
"pandas==1.4.2",
"python-dateutil==2.8.2",
"pytz==2022.1",
"requests==2.27.1",
"six==1.16.0",
"urllib3==1.26.9"]
build-backend = "hatchling.build"

[project]
name = "binance_load"
version = "1.0.2"
authors = [
    { name="Igor Rogachevich", email="shmeller86@gmail.com" },
]
description = "simple module for continuous loading of temporary historical data"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/shmeller86/shmeller86"